# course-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  course-generator-claude.md  fly.toml
.github/workflows/: ci.yml  release.yml
courses/c/: 01-hello-world.toml  02-variables.toml  03-data-types.toml  04-operators.toml  05-strings.toml  06-conditionals.toml  07-loops.toml  08-functions.toml  09-collections-list.toml  10-collections-map.toml  11-collections-set.toml  12-error-handling.toml  13-string-methods.toml  14-file-io.toml  15-modules.toml  16-closures-lambdas.toml  17-iterators.toml  18-structs-or-classes.toml  19-enums-or-sum-types.toml  20-generics-or-templates.toml  21-traits-or-interfaces.toml  22-lifetimes-or-ownership.toml  23-concurrency.toml  24-testing.toml  25-cli-project.toml  26-capstone.toml
courses/go/: 01-hello-world.toml  02-variables.toml  03-data-types.toml  04-operators.toml  05-strings.toml  06-conditionals.toml  07-loops.toml  08-functions.toml  09-slices.toml  10-maps.toml  11-structs.toml  12-error-handling.toml  13-string-methods.toml  14-file-io.toml  15-packages.toml  16-closures.toml  17-methods-interfaces.toml  18-pointers.toml  19-type-embedding.toml  20-generics.toml  21-goroutines-channels.toml  23-context.toml  (+4 more)
lessons/: 02-variables.toml  04-data-types.toml  06-control-flow.toml  09-enums.toml  12-vec.toml  15-traits.toml  17-closures.toml  24-error-handling-advanced.toml
scripts/: validate_lessons.py
src/: language.rs  lib.rs  main.rs
web/: app.js  index.html  style.css
(+78 files in other folders)
