[package]
name = "course-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "course_engine"
path = "src/lib.rs"

[[bin]]
name = "rust-course"
path = "src/main.rs"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
toml         = "1.1"
clap         = { version = "4.6", features = ["derive"] }
dialoguer    = "0.12"
console      = "0.16"
indicatif    = "0.18"
dirs         = "6.0"
tempfile     = "3.27"
similar      = "2.7"
anyhow       = "1.0"
thiserror    = "2.0"
axum         = "0.8"
tokio        = { version = "1", features = ["full"] }
tower-http   = { version = "0.6", features = ["cors"] }

[dev-dependencies]
assert_cmd   = "2.0"
predicates   = "3.1"
tower        = "0.5"
